appId: ${APP_ID}
name: Room Actions
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-11

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}
- evalScript: ${output.room = output.utils.createRandomRoom(output.user.username, output.user.password)}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- runFlow:
    file: '../../helpers/navigate-to-room-action.yaml'
    env:
      ROOM: ${output.room.name}

# should have room actions screen
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000

# should have info
- extendedWaitUntil:
    visible:
      id: 'room-actions-info'
    timeout: 60000

# should have members
- extendedWaitUntil:
    visible:
      id: 'room-actions-members'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*1 members.*'
    timeout: 60000

# should have files
- extendedWaitUntil:
    visible:
      id: 'room-actions-files'
    timeout: 60000

# should have mentions
- extendedWaitUntil:
    visible:
      id: 'room-actions-mentioned'
    timeout: 60000

# should have starred
- extendedWaitUntil:
    visible:
      id: 'room-actions-starred'
    timeout: 60000

# should have share
- extendedWaitUntil:
    visible:
      id: 'room-actions-share'
    timeout: 60000

# should have pinned
- extendedWaitUntil:
    visible:
      id: 'room-actions-pinned'
    timeout: 60000

# should have notifications
- extendedWaitUntil:
    visible:
      id: 'room-actions-notifications'
    timeout: 60000

# should have leave channel
- scrollUntilVisible:
    element:
      id: 'room-actions-leave-channel'

# should show mentioned messages
- scrollUntilVisible:
    element:
      id: 'room-actions-mentioned'
    direction: UP
- tapOn:
    id: 'room-actions-mentioned'
- extendedWaitUntil:
    visible:
      id: 'mentioned-messages-view'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'

# should star and show in starred message
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'messageToStar'
- extendedWaitUntil:
    visible:
      id: message-content-messageToStar
    timeout: 60000
- longPressOn:
    id: message-content-messageToStar
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- swipe:
    from:
      id: action-sheet-handle
    direction: UP
- scrollUntilVisible:
    element:
      text: 'Star'
    timeout: 60000
- tapOn:
    text: 'Star'
- extendedWaitUntil:
    notVisible:
      text: '.*Message Starred.*'
    timeout: 60000
- runFlow: '../../helpers/open-room-actions.yaml'
- tapOn:
    id: 'room-actions-starred'
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: starred-messages-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'message-content-messageToStar'
    timeout: 60000
# should unstar
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: message-content-messageToStar
    timeout: 60000
- longPressOn:
    id: message-content-messageToStar
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- swipe:
    from:
      id: action-sheet-handle
    direction: UP
- scrollUntilVisible:
    element:
      text: 'Unstar'
    timeout: 60000
- tapOn:
    text: 'Unstar'
- extendedWaitUntil:
    notVisible:
      text: '.*Message Unstarred.*'
    timeout: 60000
- runFlow: '../../helpers/open-room-actions.yaml'
- tapOn:
    id: 'room-actions-starred'
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: starred-messages-view
    timeout: 60000
- extendedWaitUntil:
    notVisible:
      id: 'message-content-messageToStar'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'

# should pin a message and show in pinned
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'messageToPin'
- extendedWaitUntil:
    visible:
      id: 'message-content-messageToPin'
    timeout: 60000
- longPressOn:
    id: message-content-messageToPin
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- swipe:
    from:
      id: action-sheet-handle
    direction: UP
- extendedWaitUntil:
    visible:
      text: Pin
    timeout: 60000
- tapOn:
    text: Pin
- extendedWaitUntil:
    visible:
      text: '.*Pinned a message:.*'
    timeout: 60000
- runFlow: '../../helpers/open-room-actions.yaml'
- tapOn: Pinned
- extendedWaitUntil:
    visible:
      id: 'message-content-messageToPin'
    timeout: 60000

# should unpin a message
- longPressOn:
    id: message-content-messageToPin
- extendedWaitUntil:
    visible:
      text: 'Unpin'
    timeout: 60000
- tapOn:
    text: 'Unpin'
- extendedWaitUntil:
    notVisible:
      id: 'message-content-messageToPin'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000

# should navigate to notification preference view
- scrollUntilVisible:
    element:
      id: 'room-actions-notifications'
    timeout: 60000
- tapOn:
    id: 'room-actions-notifications'
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view'
    timeout: 60000

# should have receive notification option
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view-receive-notification'
    timeout: 60000

# should have show unread count option
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view-mark-as-unread'
    timeout: 60000

# should have notification alert option
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view-alert'
    timeout: 60000

# should have push notification option
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view-push-notification'
    timeout: 60000

# should have notification sound option
- scrollUntilVisible:
    element:
      id: 'notification-preference-view-sound'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view-sound'
    timeout: 60000

# should have email alert option
- scrollUntilVisible:
    element:
      id: 'notification-preference-view-email-alert'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'notification-preference-view-email-alert'
    timeout: 60000

- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000

# should tap on leave channel and raise alert
- scrollUntilVisible:
    element:
      id: room-actions-leave-channel
    timeout: 60000
- tapOn:
    id: room-actions-leave-channel
- extendedWaitUntil:
    visible:
      text: '.*Are you sure you want to leave the room.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*YES, LEAVE IT!.*'
    timeout: 60000
- tapOn:
    text: '.*YES, LEAVE IT!.*'
- extendedWaitUntil:
    visible:
      text: '.*You are the last owner. Please set new owner before leaving the room.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'OK'
    timeout: 60000
- tapOn:
    text: 'OK'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000

# should add users to the room
- extendedWaitUntil:
    visible:
      id: 'room-actions-members'
    timeout: 60000
- tapOn:
    id: 'room-actions-members'
- extendedWaitUntil:
    visible:
      id: 'room-actions-add-user'
    timeout: 60000
- tapOn:
    id: room-actions-add-user
- evalScript: ${output.result = output.utils.createDM(output.user.username, output.user.password, 'rocket.cat')}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-rocket.cat'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'selected-user-rocket.cat'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- inputText: ${output.otherUser.username}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'selected-user-${output.otherUser.username}'
    timeout: 60000
- runFlow: '../../helpers/close-search.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Next'
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      text: '.*3 members.*'
    timeout: 60000

# should show all users
- tapOn:
    id: 'room-actions-members'
- extendedWaitUntil:
    visible:
      id: 'room-members-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/select-header-filter.yaml'
    env:
      ANDROID_FILTER_ID: 'room-members-view-filter'
      ANDROID_OPTION_ID: 'room-members-view-toggle-status-all'
      IOS_OPTION: 'All'
- extendedWaitUntil:
    notVisible:
      id: 'room-members-view-toggle-status-all'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'

# should filter user
- tapOn:
    id: 'room-actions-members'
- extendedWaitUntil:
    visible:
      id: 'room-members-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'room-members-view-search'
- inputText: 'rocket'
- tapOn:
    id: room-members-view
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-rocket.cat'
    timeout: 60000
- extendedWaitUntil:
    notVisible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- runFlow: '../../helpers/clear-search-field.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-rocket.cat'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000

# should remove user from room
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-rocket.cat'
    timeout: 60000
- tapOn:
    id: room-members-view-item-rocket.cat
- extendedWaitUntil:
    visible:
      id: 'action-sheet-remove-from-room'
    timeout: 60000
- tapOn:
    id: action-sheet-remove-from-room
- extendedWaitUntil:
    visible:
      text: '.*The user will be removed from.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*YES, REMOVE USER!.*'
    timeout: 60000
- tapOn: YES, REMOVE USER!
- extendedWaitUntil:
    notVisible:
      id: 'room-members-view-item-rocket.cat'
    timeout: 60000

# should set/remove as owner
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-owner'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-owner-unchecked'
    timeout: 60000
- tapOn:
    id: action-sheet-set-owner

- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-owner'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-owner-checked'
    timeout: 60000
- tapOn:
    id: action-sheet-set-owner

- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-owner'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-owner-unchecked'
    timeout: 60000
- tapOn:
    text: Cancel

# should set/remove as moderator
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-moderator'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-moderator-unchecked'
    timeout: 60000
- tapOn:
    id: action-sheet-set-moderator

- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-moderator'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-moderator-checked'
    timeout: 60000
- tapOn:
    id: action-sheet-set-moderator

- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-moderator'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'action-sheet-set-moderator-unchecked'
    timeout: 60000
- tapOn:
    text: 'Cancel'

# should set/remove as mute
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-mute-user'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Disable writing in room'
    timeout: 60000
- tapOn:
    id: 'action-sheet-mute-user'
- extendedWaitUntil:
    visible:
      text: '.*Are you sure?.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*DISABLE WRITING IN ROOM.*'
    timeout: 60000
- tapOn: 'DISABLE WRITING IN ROOM'

- retry:
    maxRetries: 3
    commands:
      - runFlow:
          when:
            visible:
              id: 'action-sheet-mute-user'
          commands:
            - tapOn:
                text: 'Cancel'
      - extendedWaitUntil:
          visible:
            id: 'room-members-view-item-${output.otherUser.username}'
          timeout: 60000
      - tapOn:
          id: 'room-members-view-item-${output.otherUser.username}'
      - extendedWaitUntil:
          visible:
            id: 'action-sheet-mute-user'
          timeout: 60000
      - extendedWaitUntil:
          visible:
            text: 'Enable writing in room'
          timeout: 10000
- tapOn:
    id: action-sheet-mute-user
- extendedWaitUntil:
    visible:
      text: '.*Are you sure?.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*ENABLE WRITING IN ROOM.*'
    timeout: 60000
- tapOn: 'ENABLE WRITING IN ROOM'

- retry:
    maxRetries: 3
    commands:
      - runFlow:
          when:
            visible:
              id: 'action-sheet-mute-user'
          commands:
            - tapOn:
                text: 'Cancel'
      - extendedWaitUntil:
          visible:
            id: 'room-members-view-item-${output.otherUser.username}'
          timeout: 60000
      - tapOn:
          id: 'room-members-view-item-${output.otherUser.username}'
      - extendedWaitUntil:
          visible:
            id: 'action-sheet-mute-user'
          timeout: 60000
      - extendedWaitUntil:
          visible:
            text: 'Disable writing in room'
          timeout: 10000
- tapOn:
    text: 'Cancel'

# should ignore user
- evalScript: ${output.utils.sendMessage(output.otherUser.username, output.otherUser.password, output.room.name, 'ignoredmessagecontent')}
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'action-sheet-ignore-user'
    timeout: 60000
- tapOn:
    id: action-sheet-ignore-user
- extendedWaitUntil:
    visible:
      text: 'User has been ignored'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      text: '.*Message ignored. Tap to display it.*'
    timeout: 60000
- tapOn:
    text: '.*Message ignored. Tap to display it.*'
- extendedWaitUntil:
    visible:
      text: '.*ignoredmessagecontent.*'
    timeout: 60000

# should navigate to direct message
- runFlow: '../../helpers/open-room-actions.yaml'
- tapOn:
    id: 'room-actions-members'
- extendedWaitUntil:
    visible:
      id: 'room-members-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'room-members-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'room-members-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      text: 'Direct message'
    timeout: 60000
- tapOn:
    text: 'Direct message'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.otherUser.username}
- runFlow:
    when:
      platform: android
    commands:
      - tapOn: Back
- runFlow:
    when:
      platform: iOS
    commands:
      - runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
