appId: ${APP_ID}
name: Room Info
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-9

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.room = output.utils.createRandomRoom(output.user.username, output.user.password, 'p')}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- runFlow:
    file: './utils/navigate-to-room-info.yaml'
    env:
      ROOM: ${output.room.name}

# should have room info view
- extendedWaitUntil:
    visible:
      id: 'room-info-view'
    timeout: 60000

# should have name
- extendedWaitUntil:
    visible:
      id: 'room-info-view-name'
    timeout: 60000

# should have description
- extendedWaitUntil:
    visible:
      text: 'Description'
    timeout: 60000

# should have topic
- extendedWaitUntil:
    visible:
      text: 'Topic'
    timeout: 60000

# should have announcement
- extendedWaitUntil:
    visible:
      text: 'Announcement'
    timeout: 60000

# should have edit button
- runFlow:
    file: '../../helpers/wait-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view'
    timeout: 60000

# should have room info edit view
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view'
    timeout: 60000

# should have name input
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view-name'
    timeout: 60000

# should have description input
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view-description'
    timeout: 60000

# should have topic input
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view-topic'
    timeout: 60000

# should have announcement input
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view-announcement'
    timeout: 60000

# should have password input
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-password'
    timeout: 60000

# should have type switch
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-t'
    timeout: 60000

# should have ready only switch
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-ro'
    timeout: 60000

# should have submit button
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-submit'
    timeout: 60000

# should have reset button
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-reset'
    timeout: 60000

# should have archive button
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-archive'
    timeout: 60000

# should have delete button
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-delete'
    timeout: 60000

# should reset form
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view-name'
    timeout: 60000
- tapOn:
    id: room-info-edit-view-name
- eraseText
- inputText: abc
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-topic'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-topic'
- inputText: abc
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-announcement'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-announcement'
- inputText: abc
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-description'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-description'
- inputText: abc
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-password'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-password'
- inputText: abc
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-t'
    timeout: 60000
    centerElement: true
- tapOn:
    id: 'room-info-edit-view-t'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-ro'
    timeout: 60000
    centerElement: true
- tapOn:
    id: 'room-info-edit-view-ro'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-react-when-ro'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-react-when-ro'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-reset'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-reset'

- scrollUntilVisible:
    element:
      id: 'avatar-edit-button'
    timeout: 60000
    direction: UP
- scrollUntilVisible:
    element:
      text: '.*${output.room.name}.*'
    timeout: 60000
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-topic'
    timeout: 60000
- assertVisible:
    text: ''
    childOf:
      id: 'room-info-edit-view-topic'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-announcement'
    timeout: 60000
- assertVisible:
    text: ''
    childOf:
      id: 'room-info-edit-view-announcement'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-description'
    timeout: 60000
- assertVisible:
    text: ''
    childOf:
      id: 'room-info-edit-view-description'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-password'
    timeout: 60000
- assertVisible:
    text: ''
    childOf:
      id: 'room-info-edit-view-password'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-t'
    timeout: 60000
- assertVisible:
    checked: false
    childOf:
      id: 'room-info-edit-view-t'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-ro'
    timeout: 60000
- assertVisible:
    checked: false
    childOf:
      id: 'room-info-edit-view-ro'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-switch-system-messages'
    timeout: 60000
- assertNotVisible:
    id: 'room-info-edit-view-react-when-ro'

# should change room name
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'
- evalScript: ${output.newroomname = output.room.name + 'new'}
- tapOn:
    id: 'room-info-edit-view-name'
- runFlow:
    file: '../../helpers/erase-text.yaml'
    env:
      id: 'room-info-edit-view-name'
- inputText: ${output.newroomname}
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-submit'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-submit'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            text: '.*Settings succesfully changed.*'
          timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-info-view'
    timeout: 60000
- assertVisible:
    text: '.*${output.newroomname}.*'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view'
    timeout: 60000

# should change room description, topic, announcement
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            text: '.*Settings succesfully changed.*'
          timeout: 60000
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-topic'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-topic'
- inputText: 'new topic'
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-announcement'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-announcement'
- inputText: 'new announcement'
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-description'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-description'
- inputText: 'new description'
- runFlow: '../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-submit'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-submit'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            text: '.*Settings succesfully changed.*'
          timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-info-view'
    timeout: 60000
- assertVisible:
    text: '.*new description.*'
- assertVisible:
    text: '.*new topic.*'
- assertVisible:
    text: '.*new announcement.*'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'
- extendedWaitUntil:
    visible:
      id: 'room-info-edit-view'
    timeout: 60000

# should change room type
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-t'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-t'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-submit'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-submit'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            text: '.*Settings succesfully changed.*'
          timeout: 60000

# should archive room
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-archive'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-archive'
- extendedWaitUntil:
    visible:
      text: '.*Do you really want to archive this room.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*Yes, archive it.*'
    timeout: 60000
- tapOn:
    text: 'Yes, archive it.'

# should delete room
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-delete'
    timeout: 60000
- tapOn:
    id: 'room-info-edit-view-delete'
- extendedWaitUntil:
    visible:
      text: '.*Deleting a room will delete all messages posted within the room. This cannot be undone..*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*YES, DELETE IT!.*'
    timeout: 60000
- tapOn:
    text: '.*YES, DELETE IT.*'

# should see user role correctly
- runFlow:
    file: './utils/navigate-to-room-info.yaml'
    env:
      ROOM: 'roles-test'
- extendedWaitUntil:
    visible:
      id: 'user-roles'
    timeout: 60000
- assertVisible:
    id: 'user-role-Livechat-Agent'
